Set z-index of selectionmenu to ensure it is over compass directions

--- a/src/regalia/css/style.css
+++ b/src/regalia/css/style.css
@@ -219,6 +219,7 @@ td {
 }
 
 #selectionmenu {
+    z-index: 100;
     position: absolute;
     background-color: White;
     min-width: 200px;
